# Algorithm_Problems

./: .gitignore  .replit  10026.py  1003 - 피보나치함수.py  1010 - 다리놓기.py  1012 - 유기농배추.py  1012.py  10162.py  1018 - 체스판 다시 칠하기.py  1018.py  1021 - 회전하는 수.py  1026 - 보물.py  1032 - 명령 프롬프트.py  1038.py  1043.py  1051 - 숫자정사각형.py  10699.py  1075.py  10773 - 제로.py  10798.py  10808 - 알파벳개수.py  10815.py  10816 - 숫자 카드 2.py  10818.py  10845 - 큐.py  10859.py  10866 - 덱.py  1094 - 막대기.py  10973.py  10988.py  1100 - 하얀 칸.py  11279 - 최대힙.py  11286.py  1138 - 한 줄로 서기.py  11557.py  11650.py  11656.py  11718 - 그대로 출력하기.py  11721 - 열개씩 끊어 출력하기.py  11723 - 집합.py  (+229 more)
BOJ_Problems/: 1002.c  1010.py  1016.py  1025.py  1026.py  1027.py  10282.py  1030.py  1036.py  1041.py  1051.py  10610.py  1064.py  1064_hard.py  1068.py  1072.py  10773.py  10799.py  10808.py  10816.py  10826.py  10827.py  10830.py  10845.py  10942.py  10951.py  11000.py  11365.py  11401.py  11403.py  11404.py  11444.py  11478.py  1149.py  1153.py  11650.py  11659.py  1167.py  11689.py  1169.py  (+221 more)
C_ETC/: 11729-하노이탑_이동_순서.c  2475-검증수.c  malloc이용한_개수지정후_각_배열원소번호끼리의_합_구하기.c  nK2n_인_소수_K의_개수.c  골드바흐파티션.c  그룹단어_체커.c  달팽이_막대올라가기.c  많이_쓰인_알파벳_출력.c  배열을_활용한_나머지mod_데이터_관리.c  블랙잭_변형_게임.c  산도측정.c  설탕_봉지에_담기.c  알람_45분_당기기.c  직각삼각형_판별.c  최대공약수_최소공배수_문제.c  택시_기하학.c  평균_조작.c  한글.c
Everytime-Time-Table/: everytime.py  timetable.txt
Number-Baseball/: best_user_score.txt
Programmers_Problems/: 2020-자물쇠와열쇠.py  2021-2.py  표현가능한이진트리.py
Python_BOJ/: 1003.py  1011.py  1012.py  1018.py  1021.py  1032.py  1064.py  1064_hard.py  1065.c  1074.py  (+134 more)
(+64 files in other folders)
