[tool.poetry]
name = "repl_python3_beta_Coding-Example-3"
version = "0.1.0"
description = ""
authors = ["MinjaeLee1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
